# ZPE-IoT

./: .gitignore  .zenodo.json  AUDITOR_PLAYBOOK.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_REPORT_V6.md  CONTRIBUTING.md  GOVERNANCE.md  LANE_INTERLOCKS.md  Makefile  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASE_IMPACT.md  RELEASING.md  REPRODUCIBILITY.md  REPRODUCING.md  ROADMAP.md  SECURITY.md  SUITE_COMPATIBILITY_VECTOR.json  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build_wheels.yml  ci.yml  packaging_warnings.yml  publish.yml  release.yml
.gpd/: CONVENTIONS.md  DECISIONS.md  NOTATION_GLOSSARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json
c/: example.c  zpe_iot.h
core/: Cargo.toml  cbindgen.toml
core/src/: adaptive.rs  bitpack.rs  codec.rs  ffi.rs  lib.rs  magnitude.rs  presets.rs  quantise.rs  rle.rs
core/tests/: test_codec.rs  test_invariance.rs  test_parity.rs
docs/: API.md  ARCHITECTURE.md  ARCH_TIGHTNESS_AUDIT.md  BENCHMARKS.md  CHANGELOG.md  CHEMOSENSE_EXTENSION.md  CI_POLICY.md  CLI_CONTRACT.md  CURRENT_PUBLIC_STATUS.md  DOC_REGISTRY.md  FAQ.md  FIDELITY_SEMANTICS.md  INTEGRATION_GUIDE.md  LEGAL_BOUNDARIES.md  OUTREACH_TEMPLATE.md  PRD_IOT_EXTERNAL_BASELINE_AND_DT09_2026-02-20.md  PRD_IOT_WAVE1_RELEASE_REFINEMENT.md  README.md  RELEASE_CHECKLIST.md  SESSION_LOG.md  STARTUP_PROMPT_IOT_EXTERNAL_BASELINE_AUGMENTED_2026-02-21.md  STARTUP_PROMPT_IOT_WAVE1_RELEASE_REFINEMENT.md  SUPPORT.md  TARGET_CUSTOMERS.md  TEST_MATRIX.md  THRESHOLD_GOVERNANCE_AUDIT.md  ZPE_IOT_SALES_BRIEF.md  market_surface.json
docs/family/: IOT_COMPATIBILITY_VECTOR.json  IOT_IMC_ALIGNMENT_REPORT.md  IOT_RELEASE_NOTE_FOR_COORDINATION.md
docs/perf/: chemosense_profile_20260220T195520.md  chemosense_profile_20260220T200249.md  chemosense_profile_20260220T201554.md  chemosense_profile_20260220T202237.md  chemosense_profile_20260309T060912.md  chemosense_profile_20260321T225526.md  profile_hot_paths_20260219T023929.txt
examples/: ble_beacon.py  lorawan_payload.py  mqtt_integration.py
examples/python/: csv_compressor.py  mqtt_bridge.py  quickstart.py
project_docs/: PRD_06_ENTERPRISE_EXECUTION_v1.0.md  REPO_TOPOLOGY.md  RUNBOOK_00_MASTER.md  RUNBOOK_04_BENCHMARKS.md  RUNBOOK_IOT_Rx_STRICT_STABILITY.md  SYNC_HISTORY.md
proofs/: FINAL_STATUS.md  PROOF_INDEX.md  RELEASE_READINESS_REPORT.md
proofs/artifacts/: 20260320T152852Z_codex_receipt.md  20260320T154920Z_codex_receipt.md  20260320T181136Z_codex_receipt.md  20260320T195301Z_codex_receipt.md  20260320T200654Z_codex_receipt.md  20260320T213349Z_codex_receipt.md  20260320T223900Z_codex_receipt.md  20260321T005639Z_codex_receipt.md  20260321T021202Z_codex_receipt.md  20260321T021412Z_codex_receipt.md  20260321T131348Z_codex_receipt.md  20260321T144950Z_codex_receipt.md  20260321T160755Z_codex_receipt.md  20260321T162833Z_codex_receipt.md  20260321T165845Z_codex_receipt.md  20260321T171326Z_codex_receipt.md  20260321T205601Z_codex_receipt.md  20260321T220635Z_codex_receipt.md  20260321T230908Z_codex_receipt.md  20260321T232526Z_codex_receipt.md  20260321T233005Z_codex_receipt.md  BLIND_CLONE_VERIFICATION.md  DOCS_FALSIFICATION_REPORT_20260321.md  LOSS_DIAGNOSIS.md  LOSS_DIAGNOSIS_COMPACT.json  OPERATIONAL_REALIGNMENT_20260320T152852Z.md  PHASE2_AUTHORITY_GAP_TASKING_20260320.md  PHASE2_BRIDGE_EXECUTION_CONTRACT_20260320.md  PHASE2_BRIDGE_SOLUTION_RECEIPT_20260321.md  PHASE2_BYTE_SINK_EXECUTION_SLICE_20260320.md  PHASE2_CANDIDATE_SHORTLIST_20260321.md  PHASE2_DS05_DS02_BRIDGE_TASKING_20260320.md  PHASE2_GAP_BUDGET_20260321.json  PHASE2_MONOTONICITY_PROBE_20260320.json  PHASE2_OVERHEAD_DECOMPOSITION_20260321.json  PHASE2_SMOOTH_SERIES_PROBE_20260321.json  PHASE2_SMOOTH_SERIES_TASKING_20260321.md  PHASE2_TOKEN_BITPACK_FEASIBILITY_20260321.json  PHASE2_TOKEN_BITPACK_PROBE_20260321.json  PHASE2_WORKSTREAM_RECHECK_20260320.md  (+10 more)
proofs/logs/: README.md
proofs/runbooks/: 20260321_docs_alignment_plan.md  README.md  REPO_TECHNICAL_ALIGNMENT_EXECUTION_PROMPT.md  REPO_TECHNICAL_ALIGNMENT_PLAN.md  REPO_TECHNICAL_EXECUTION_SUPPLEMENT.md  (+1 more)
python/: README.md  pyproject.toml
python/native/: Cargo.toml
python/native/src/: lib.rs
python/tests/: test_benchmark_label_golden.py  test_benchmark_labels.py  test_benchmarks_doc.py  test_benchmarks_phase3.py  test_chemosense.py  test_chemosense_contract.py  test_chemosense_extended.py  test_chemosense_mental.py  test_chemosense_rc_bundle_strict.py  test_chemosense_touch.py  test_clean_install.py  test_cli.py  test_codec.py  test_dt09_gate_semantics.py  test_dt16_baseline_immutability.py  test_fidelity_semantics.py  test_mqtt_roundtrip.py  test_native.py  test_packet_compatibility.py  test_parity.py  test_payload_examples.py  test_presets.py  test_tracking.py
python/tests/fixtures/: benchmark_label_cases.json  clinical_phosphenes.json  golden_packets_v1.json  real_haptic_patterns.json
python/zpe_iot/: __init__.py  _native.py  cli.py  codec.py  presets.py  tracking.py
python/zpe_iot/chemosense/: __init__.py  contract.py
python/zpe_iot/chemosense/common/: __init__.py  constants.py  quantize.py
python/zpe_iot/chemosense/mental/: __init__.py  codec.py  ingest.py  pack.py
python/zpe_iot/chemosense/smell/: __init__.py  adaptation.py  codec.py  molecular_bridge.py  odor_space.py  pack.py  phase5_augment.py  types.py
python/zpe_iot/chemosense/taste/: __init__.py  codec.py  fusion_scheduler.py  pack.py  taste_space.py  temporal_codebook.py  types.py
python/zpe_iot/chemosense/touch/: __init__.py  anatomy.py  codec.py  pack.py  phase5_extensions.py  proprioception.py  receptor_model.py  types.py
scripts/: build_chemosense_rc_bundle.py  build_release_bundle.py  customer_demo.py  generate_c_header.sh  generate_checksums.py  generate_release_artifacts.py  pareto_sweep.py  profile_hot_paths.py  release_preflight.py  release_preflight.sh  run_external_baseline_augmented.py  runtime_surface.py  savings_calculator.py  security_scan.py  sync_memory_docs.sh  tuning_wizard.py
validation/benchmarks/: _common.py  (+22 more)
(+431 files in other folders)
