[package]
name = "zpe-iot"
version = "0.1.0"
edition = "2021"
description = "8-primitive geometric compression SDK for IoT sensor data"
license = "LicenseRef-Zer0pa-SAL-7.0"
keywords = ["compression", "iot", "sensor", "embedded", "no_std"]
homepage = "https://github.com/Zer0pa/ZPE-IoT"
repository = "https://github.com/Zer0pa/ZPE-IoT"
documentation = "https://github.com/Zer0pa/ZPE-IoT/tree/main/docs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["std"]
std = []
embedded = []

[dependencies]
heapless = "0.8"
libm = "0.2"

[dev-dependencies]
proptest = "1.4"
