[project]
name = "zpe-iot"
version = "0.1.0"
description = "8-primitive geometric compression SDK for IoT sensor data"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "click>=8.0",
    "cffi>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "comet_ml>=3.35",
    "matplotlib>=3.7",
    "zstandard>=0.22",
    "lz4>=4.3",
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
zpe-iot = "zpe_iot.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["zpe_iot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
