[project]
name = "zpe-iot"
version = "0.1.0"
description = "8-primitive geometric compression SDK for IoT sensor data"
license = "LicenseRef-Zer0pa-SAL-6.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "click>=8.0",
    "cffi>=1.16",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-IoT"
Repository = "https://github.com/Zer0pa/ZPE-IoT"
Documentation = "https://github.com/Zer0pa/ZPE-IoT/tree/main/docs"
Issues = "https://github.com/Zer0pa/ZPE-IoT/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
]
bench = [
    "matplotlib>=3.7",
    "zstandard>=0.22",
    "lz4>=4.3",
]
observability = [
    "comet_ml>=3.35",
    "opik>=1.10,<2.0",
]
release = [
    "maturin>=1.8,<2.0",
    "build>=1.2",
    "twine>=5.1",
    "pip-audit>=2.7",
    "cyclonedx-bom>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "comet_ml>=3.35",
    "opik>=1.10,<2.0",
    "matplotlib>=3.7",
    "zstandard>=0.22",
    "lz4>=4.3",
    "maturin>=1.8,<2.0",
    "build>=1.2",
    "twine>=5.1",
    "pip-audit>=2.7",
    "cyclonedx-bom>=4.0",
]

[project.scripts]
zpe-iot = "zpe_iot.cli:main"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "native/Cargo.toml"
python-source = "."
module-name = "zpe_iot._zpe_iot_native"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=zpe_iot --cov-fail-under=85 --cov-report=term-missing --cov-report=xml:../validation/results/coverage/python_coverage.xml --cov-report=html:../validation/results/coverage/python_html"
