[package]
name = "zpe_iot_native"
version = "0.1.0"
edition = "2021"
publish = false
license = "LicenseRef-Zer0pa-SAL-7.0"
description = "Native Rust extension module for the ZPE-IoT runtime"
homepage = "https://github.com/Zer0pa/ZPE-IoT"
repository = "https://github.com/Zer0pa/ZPE-IoT"
documentation = "https://github.com/Zer0pa/ZPE-IoT/tree/main/docs"

[lib]
name = "_zpe_iot_native"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.24"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
zpe-iot = { path = "../../core", package = "zpe-iot" }

[package.metadata.maturin]
name = "zpe_iot"
python-source = ".."
module-name = "zpe_iot._zpe_iot_native"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
overflow-checks = false
